# hall_diffusion

./: .gitignore  Manifest.toml  Project.toml  README.md  justfile  plots.ipynb  pyproject.toml  stds.csv  tucker_load.ipynb
configs/: config_edm.toml  config_edm2.toml  config_edm2_5.toml  config_large.toml  config_medium.toml  config_medsmall.toml  config_small.toml  config_xs.toml  sample_controlnet.toml  sample_mcmc.toml  sample_mcmc_forward.toml  sample_noTe.toml  sample_noTe_forward.toml  sample_perez_luna.toml  sample_perez_luna_withE.toml  sample_roberts.toml  sample_roberts_lif_only.toml  sample_uncond.toml  sample_withTe.toml  train_controlnet.toml  train_edm.toml  train_edm2.5.toml  train_edm2.toml  train_edm2_flowmatch.toml  train_h9.toml  train_scalars_xs.toml
experimental_data/: data_pb=3.5e-5.toml  ui_data_full.csv
experimental_methods/perez_luna/: E_simple.csv  data_pb=3.5e-5.toml  observation.toml  observation_withE.toml  perez_luna.csv  perez_luna.py
experimental_methods/perez_luna/data_35uTorr/: z_-2.csv  z_-4.csv  z_-6.csv  z_-8.csv  z_0.csv  z_10.csv  z_14.csv  z_18.csv  z_2.csv  (+6 more)
experimental_methods/roberts/: observation.csv  observation.toml  observation_lif_only.toml  roberts.csv  roberts.py
hall_diffusion/: compress.py  loss.py  plot.py  run_mcmc.py  sample.py  test_train_split.py  train.py
hall_diffusion/models/: controlnet.py  edm2.py  ema.py
hall_diffusion/samplers/: edmsampler.py
hall_diffusion/tests/: test_edm2.py
hall_diffusion/utils/: thruster_data.py  utils.py  visualization.py
julia/: bfield_spt100.csv  compress.jl  convert_jsons.jl  generate_data.jl  normalize_data.jl  spt100.json
mcmc_reference/: .gitignore  compress.jl  data_output.json
mcmc_reference/ref_3charge/: compare.py
mcmc_reference/ref_sim/: data_output.json
models/: edm2.py
python/: compress.py  loss.py  mmd.py  noise.py  plot.py  run_mcmc.py  sample.py  test_train_split.py  train.py  tucker_decomp.py
python/models/: __init__.py  controlnet.py  edm.py  edm2.py  ema.py
python/samplers/: edmsampler.py
python/tests/: test_controlnet.py  test_edm2.py
python/utils/: normalization.py  thruster_data.py  timing.py  utils.py  visualization.py
utils/: thruster_data.py  utils.py
workflows/: sample.py  test_train_split.py  train.py
(+10 files in other folders)
