[project]
name = "hall-diffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "htucker",
    "matplotlib>=3.10.3",
    "mcmciterators",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "scipy>=1.16.3",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length=120

[tool.uv.sources]
htucker = { git = "https://github.com/gorodetsky-umich/htucker_incremental" }
mcmciterators = { git = "https://github.com/goroda/MCMCIterators" }

[dependency-groups]
dev = [
    "jupyterlab>=4.5.1",
]
