[project]
name = "hall-diffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "htucker",
    "joblib>=1.5.3",
    "matplotlib>=3.10.3",
    "mcmciterators",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "scipy>=1.16.3",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["python/tests"]
pythonpath = ["python"]

[tool.ruff]
line-length=120

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
htucker = { git = "https://github.com/gorodetsky-umich/htucker_incremental" }
mcmciterators = { git = "https://github.com/goroda/MCMCIterators.git" }
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5.1",
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
